yamls/grocy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grocy
  labels:
    app: grocy
spec:
  strategy:
    type: "Recreate"
  replicas: 1
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy:4.5.0
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: grocy-pv
              mountPath: "/config"
      volumes:
        - name: grocy-pv
          persistentVolumeClaim:
            claimName: grocy-claim
